03_microservice_spring_cloud_kubernetes/configserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-service
  namespace: micro
spec:
  type: ClusterIP
  selector:
    app: config-server
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
