03_microservice_spring_cloud_kubernetes/eureka-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  namespace: micro
spec:
  type: ClusterIP
  selector:
    app: eureka-server
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
