03_microservice_spring_cloud_kubernetes/factorial-cache-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: factorial-cache-server-service
  namespace: micro
spec:
  selector:
    app: factorial-cache-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
