03_microservice_spring_cloud_kubernetes/factorial-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  # Service 의 경우 name 이 매우 중요함
  # 다른 application 에서 호출할때 사용되기 때문에 !!!!
  name: factorial-server-service
  namespace: micro
spec:
  selector:
    # factorial-server-deployment.yaml 에 정의된 app 정보와 동일하게 설정
    # service 와 deployment 는 1:1 대응되게 됨
    app: factorial-server
  ports:
    - protocol: TCP
      # spring boot 에서 별도의 port 를 지정하지 않으면, 기본적으로 8080 port 를 사용하게 됨
      # factorial-app-service:8080 으로 호출하게 되면, factorial-app 를 호출해서 사용할 수 있게 됨
      port: 7080
      targetPort: 8080

#
# kubectl apply -f factorial-server-service.yaml
# kubectl -n factorial get service
