03_microservice_spring_cloud_kubernetes/gateway-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: micro
spec:
  type: ClusterIP
  selector:
    app: gateway-server
  ports:
    - protocol: TCP
      port: 8070
      targetPort: 8070
