03_microservice_spring_cloud_kubernetes/item-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: item-service
  namespace: micro
spec:
  type: ClusterIP
  selector:
    app: item-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
